register with SMS

--- a/Acount_app/templates/Acount_app/otc_code.html
+++ b/Acount_app/templates/Acount_app/otc_code.html
@@ -37,13 +37,13 @@
         <div class="wrap-login100 p-l-110 p-r-110 p-t-62 p-b-33">
             <form class="login100-form validate-form flex-sb flex-w" method="post">
                 {% csrf_token %}
-                <span class="login100-form-title p-b-53">
-						Register
+                <span class="login100-form-title p-b-53 badge-success">
+						Code Sended
 					</span>
 
 
                 <div class="wrap-input100 validate-input" data-validate="Username is required">
-                    {{ form.phone}}
+                    {{ form.code}}
                     <span class="focus-input100"></span>
                 </div>
 
