Add product detail page and implement slug

--- a/Home_app/templates/Home_app/index.html
+++ b/Home_app/templates/Home_app/index.html
@@ -164,7 +164,7 @@
                     </div>
                 </div>
                 <div class="text-center py-4">
-                    <a class="h6 text-decoration-none text-truncate" href="">{{ item.name }}</a>
+                    <a class="h6 text-decoration-none text-truncate" href="{{ item.get_absolut_url }}">{{ item.name }}</a>
                     <div class="d-flex align-items-center justify-content-center mt-2">
 
                         <h5>{{ item.price }}</h5>
