add directori context_processor and Add number of cart products to navbar

--- a/templates/include/navbar.html
+++ b/templates/include/navbar.html
@@ -66,7 +66,7 @@
                         <a href="" class="btn px-0 ml-3">
                             <i class="fas fa-shopping-cart text-primary"></i>
                             <span class="badge text-secondary border border-secondary rounded-circle"
-                                  style="padding-bottom: 2px;">0</span>
+                                  style="padding-bottom: 2px;">{{ detail_count }}</span>
                         </a>
                     </div>
                 </div>
