Add the ability to remove the product from the shopping cart to the project

--- a/templates/include/tapbar.html
+++ b/templates/include/tapbar.html
@@ -78,7 +78,7 @@
     </div>
     <div class="row align-items-center bg-light py-3 px-xl-5 d-none d-lg-flex">
         <div class="col-lg-4">
-            <a href="" class="text-decoration-none">
+            <a href="{% url "Home_app:Home" %}" class="text-decoration-none">
                 <span class="h1 text-uppercase text-primary bg-dark px-2">Multi</span>
                 <span class="h1 text-uppercase text-dark bg-primary px-2 ml-n1">Shop</span>
             </a>
