Implementation of login and register with phone number confirmation

--- a/Acount_app/templates/Acount_app/register.html
+++ b/Acount_app/templates/Acount_app/register.html
@@ -38,7 +38,7 @@
             <form class="login100-form validate-form flex-sb flex-w" method="post">
                 {% csrf_token %}
                 <span class="login100-form-title p-b-53">
-						Register
+						Register/Login
 					</span>
 
 
