Implementation of product like section and addition to interests

--- a/Home_app/templates/Home_app/index.html
+++ b/Home_app/templates/Home_app/index.html
@@ -158,7 +158,7 @@
                     <img class="img-fluid w-100" src="{{ item.image.url }}" alt="">
                     <div class="product-action">
                         <a class="btn btn-outline-dark btn-square" href=""><i class="fa fa-shopping-cart"></i></a>
-                        <a class="btn btn-outline-dark btn-square" href=""><i class="far fa-heart"></i></a>
+                        <a class="btn btn-outline-dark btn-square" href="{% url "Product_app:favorite" item.id %}"><i class="far fa-heart"></i></a>
                         <a class="btn btn-outline-dark btn-square" href=""><i class="fa fa-sync-alt"></i></a>
                         <a class="btn btn-outline-dark btn-square" href=""><i class="fa fa-search"></i></a>
                     </div>
