--- a/templates/include/navbar.html
+++ b/templates/include/navbar.html
@@ -61,7 +61,7 @@
                         <a href="" class="btn px-0">
                             <i class="fas fa-heart text-primary"></i>
                             <span class="badge text-secondary border border-secondary rounded-circle"
-                                  style="padding-bottom: 2px;">0</span>
+                                  style="padding-bottom: 2px;">{{ favorite_count }}</span>
                         </a>
                         <a href="{% url "Home_app:cart" %}" class="btn px-0 ml-3">
                             <i class="fas fa-shopping-cart text-primary"></i>
