--- a/templates/include/scripts.html
+++ b/templates/include/scripts.html
@@ -7,6 +7,8 @@
 
 <!-- Contact Javascript File -->
 <script src="{% static "mail/jqBootstrapValidation.min.js" %}"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
 <script src="{% static "mail/contact.js" %}"></script>
 
 <!-- Template Javascript -->
